[workspace]

members = [
    "pyth-sdk",
    "pyth-sdk-solana",
    "pyth-sdk-solana/test-contract",
    "examples/sol-contract",
]

[workspace.dependencies]
pyth-sdk = { path = "./pyth-sdk" }
pyth-sdk-solana = { path = "./pyth-sdk-solana" }

solana-program = ">= 1.10"
borsh = "0.10.3"
borsh-derive = "0.10.3"
serde = "1.0.136"
