[package]
name = "pyth-sdk-solana"
version = "0.10.3"
authors = ["Pyth Data Foundation"]
workspace = "../"
edition = "2018"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-sdk-rs"
description = "pyth price oracle data structures and example usage"
keywords = [ "pyth", "solana", "oracle" ]
readme = "README.md"

[dependencies]
solana-program = ">= 1.9"
borsh = "0.10.3"
borsh-derive = "0.10.3"
bytemuck = {version ="1.7.2", features = ["derive"]}
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
pyth-sdk = { path = "../pyth-sdk", version = "0.8.0" }

[dev-dependencies]
solana-client = ">= 1.9"
solana-sdk = ">= 1.9"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
