[package]
name = "pyth-sdk-terra"
version = "0.1.0"
authors = ["Pyth Data Foundation"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-sdk-rs"
description = "pyth price oracle data structures and example usage"
keywords = [ "pyth", "terra", "oracle" ]
readme = "README.md"

[features]
default = ["mainnet"]
mainnet = []
testnet = []

[dependencies]
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
serde = { version = "1.0.136", features = ["derive"] }
pyth-sdk = { path = "../pyth-sdk", version = "0.1.0" }
schemars = "0.8.1"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }

[lib]
crate-type = ["cdylib", "lib"]
