[package]
name = "pyth-sdk"
version = "0.1.0"
authors = ["Pyth Data Foundation"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-client-rs"
description = "pyth price oracle data structures and example usage"
keywords = [ "pyth", "oracle" ]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9"
borsh-derive = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
schemars = "0.8.8"
