[package]
name = "pyth-sdk"
version = "0.8.0"
authors = ["Pyth Data Foundation"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-sdk-rs"
description = "Data structures and utilites for the Pyth price oracle"
keywords = [ "pyth", "oracle" ]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"
serde = { version = "1.0.136", features = ["derive"] }
schemars = "0.8.8"
getrandom = { version = "0.2.2", features = ["custom"] }

[dev-dependencies]
serde_json = "1.0.79"
quickcheck = "1"
quickcheck_macros = "1"
