[package]
name = "example-sol-contract"
version = "0.1.0"
authors = ["Pyth Data Foundation"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9"
arrayref = "0.3.6"
solana-program = ">= 1.10, < 1.15"
pyth-sdk-solana = { path = "../../pyth-sdk-solana", version = "0.8.0" }
