[package]
name = "example-sol-contract"
version = "0.2.0"
authors = ["Pyth Data Foundation"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5.0", features = ["derive"] }
borsh-derive = "1.5.0"
arrayref = "0.3.6"
solana-program = "1.18.4"
pyth-sdk-solana = { path = "../../pyth-sdk-solana" }
