[package]
name = "test-contract"
version = "0.2.0"
edition = "2018"

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
pyth-sdk-solana = { path = "../", version = "0.8.0" }
solana-program = ">= 1.10, <= 1.16"
bytemuck = "1.7.2"
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = ">= 1.10, <= 1.16"
solana-client = ">= 1.10, <= 1.16"
solana-sdk = ">= 1.10, <= 1.16"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
