[package]
name = "test-contract"
version = "0.3.0"
edition = "2018"

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
pyth-sdk-solana = { path = "../" }
solana-program = "1.18.14"
bytemuck = "1.7.2"
borsh = "1.5.0"
borsh-derive = "1.5.0"

[dev-dependencies]
solana-program-test = "1.18.4"
solana-client = "1.18.4"
solana-sdk = "1.18.4"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
